Refactor the source code

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="table_sort.js" defer></script>
-    <script type="text/javascript" src="json_reader.js" defer></script>
-    <script type="text/javascript" src="search_filter.js" defer></script>
-    <script type="text/javascript" src="pagination.js" defer></script>
+    <script type="text/javascript" src="js/table_sort.js" defer></script>
+    <script type="text/javascript" src="js/json_reader.js" defer></script>
+    <script type="text/javascript" src="js/search_filter.js" defer></script>
+    <script type="text/javascript" src="js/pagination.js" defer></script>
 </head>
 <title>Sort a HTML Table Alphabetically</title>
 
