Default button hidden

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <table id="data_table"></table>
 
 
-<button id="previous_button" class="page_button" type="button" onclick="previousPage()">Previous Page</button> 
-<button id="next_button" class="page_button right_float" type="button" onclick="nextPage()">Next Page</button> 
+<button style="visibility: hidden;" id="previous_button" class="page_button" type="button" onclick="previousPage()">Previous Page</button> 
+<button style="visibility: hidden;" id="next_button" class="page_button right_float" type="button" onclick="nextPage()">Next Page</button> 
 
 
 </body>
