Rename html title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="js/search_filter.js" defer></script>
     <script type="text/javascript" src="js/pagination.js" defer></script>
 </head>
-<title>Sort a HTML Table Alphabetically</title>
+<title>Vanilla JS Tables</title>
 
 </head>
 <body>
